<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorPrimary"
    android:padding="16dp"
    tools:context=".LoginActivity">
    
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_progress"
        android:visibility="gone"
        style="?android:attr/progressBarStyleLarge"/>

    <LinearLayout
        android:id="@+id/login_form"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/email_login_form"
            android:hint="@string/email_placeholder"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <EditText
            android:id="@+id/password_login_form"
            android:layout_marginTop="16dp"
            android:hint="@string/password_placeholder"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/login_button"
            android:text="@string/login_text"
            android:textColor="@android:color/white"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/ortext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or_text"
            android:gravity="center"
            android:textSize="18sp"
            />

        <Button
            android:id="@+id/create_account_button"
            android:text="@string/create_account_text"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/white"

            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </LinearLayout>


</LinearLayout>