<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="end"
    android:id="@+id/drawer"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/toolbar"
            android:background="@color/colorAccent"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:elevation="4dp"
            />

        

        <TextView
            android:id="@+id/welcome_message"
            android:text="@string/welcome_text"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relative_layout">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                app:cardUseCompatPadding="true"
                android:layout_height="90dp"
                app:cardElevation="6dp"
                app:cardCornerRadius="8dp">

                <TextView
                    android:id="@+id/slogan"
                    android:layout_gravity="center"
                    android:text="@string/slogan_text"
                    android:layout_width="wrap_content"
                    android:textSize="19sp"
                    android:layout_height="wrap_content"/>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>

        <Button
            android:id="@+id/get_started_button"
            android:text="@string/get_started_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"/>

    </LinearLayout>


    <com.google.android.material.navigation.NavigationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/navigationView"
        app:menu="@menu/drawer_menu"
        app:headerLayout="@layout/nav_header"
        android:background="@color/colorPrimary"
        android:layout_gravity="start"
        app:itemTextColor="@color/colorAccent"/>


</androidx.drawerlayout.widget.DrawerLayout>

